force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Apttus_Config2__SyncStatus__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__SyncStatus__c</fullName>
    <description>The line synchronization status.</description>
    <label>Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Synchronized</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>