force-app/main/default/objects/Apttus_Config2__LineItem__c/validationRules/APT_Validate_International_Bundle.validationRule-meta.xml
<ValidationRule>
    <fullName>APT_Validate_International_Bundle</fullName>
    <active>true</active>
    <description>When adjustment amount is Offer Higher Band then system should not allow Adjustment amount.</description>
    <errorConditionFormula>IF(AND(OR(ISPICKVAL(Apttus_Config2__AdjustmentType__c,&quot;Offer Higher Band&quot;),ISPICKVAL(Apttus_Config2__AdjustmentType__c,&quot;Customised Pricing&quot;)), NOT(ISBLANK(Apttus_Config2__AdjustmentAmount__c))), true,false)</errorConditionFormula>
    <errorMessage>&apos;Adjustment Amount&apos; should be blank when &apos;Adjustment Type&apos; is &apos;Offer Higher Band&apos; / &apos;Customised Pricing&apos;</errorMessage>
</ValidationRule>